--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
     <div class="container">
         <div id="home" class="flex-column flex-center">
             <h1>Are You A Wizard?</h1>
-            <a href="/game.html" class="btn1">Play As Gryffindor</a>
-            <a href="/game.html" class="btn2">Play As Slytherin</a>   
-            <a href="/game.html" class="btn3">Play As Ravenclaw</a>   
-            <a href="/game.html" class="btn4">Play As Hufflepuff</a>      
+            <a href="game.html" class="btn1">Play As Gryffindor</a>
+            <a href="game.html" class="btn2">Play As Slytherin</a>  
+            <a href="game.html" class="btn3">Play As Ravenclaw</a>   
+            <a href="game.html" class="btn4">Play As Hufflepuff</a>      
         </div>
     </div> 
 </body>
